# ecs

./: .gitignore  CMakeLists.txt  README.md  scan.xml
cicd/hooks/: pre-commit
ecs/: CMakeLists.txt
ecs/Core/: Assertion.h  BasicTypes.h  BuildConfig.h  ByteConversion.h  IterableStack.h  MemoryBlock.cpp  MemoryBlock.h  MemoryManager.cpp  MemoryManager.h  Timer.cpp  Timer.h  TypeMap.h
ecs/ECS/: Component.h  Entity.cpp  Entity.h  System.cpp  System.h  View.cpp  View.h  World.cpp  World.h
test/: CMakeLists.txt  TestMemory.h  TestWorld.h  main.cpp
